Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
      }
     </style>
   </head>
-
-  <body>
+   
+   <body>
     <main id="main">My ID is "main"!</main>
-
+  <script src="./index.js"></script>
     <br />
 
     <div>
