Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    
    <body>
     <main id="main">My ID is "main"!</main>
-    <p id="yellow"
+    <p id="yellow">im in flatiron school</p>
     <br />
 
     <div>
