--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <body>
     <main id="main">My ID is "main"!</main>
     <p id="yellow">im in flatiron school</p>
+    <button id="plus"></button>
     <br />
 
     <div>
